--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lemon&family=Open+Sans&family=Pacifico&family=Roboto&display=swap" rel="stylesheet">
   <title>Cart Maker</title>
 </head>
 
